--- a/_posts/2024-05-29-01.md
+++ b/_posts/2024-05-29-01.md
@@ -5,6 +5,46 @@ date: 2024-05-29 10:00:00 +0000
 categories: blog
 ---
 
-上学期，我上了一节 “观测天文学” 的物理课。那节课重新激发了我对宇宙的兴趣。小时候的梦想一直的梦想就是做一个天文学家，但是随着年龄的长大，我发现，宇宙实在是太远太大了，总感觉这个梦想不切实际。
-![01](/assets/blog_images/052901.JPG)
-*图中的蓝点是旅行者1号在离开太阳系时拍摄的地球*
+本科的时候，我上了一节 “观测天文学” 的物理课。那节课重新激发了我对宇宙的兴趣。小时候的梦想一直的梦想就是做一个天文学家，但是随着年龄的长大，我发现，宇宙实在是太远太大了，总感觉这个梦想不切实际。
+<div class="image-container">
+  <img src="{{ '/assets/blog_images/0529_01.JPG' | relative_url }}" alt="Image 1">
+  <br>
+  <div class="caption"> 图中的蓝点是旅行者1号在离开太阳系时拍摄的地球</div>
+</div>
+
+但是心里那种对宇宙的好奇和对未知的探索，却一直推动者我。抬起头，去仰望这个一望无际的宇宙；去拍摄，这星光璀璨的星空。
+<div class="image-container">
+  <img src="{{ '/assets/blog_images/0529_02.JPG' | relative_url }}" alt="Image 2">
+</div>
+<div class="image-container">
+    <img src="{{ '/assets/blog_images/0529_04.JPG' | relative_url }}" alt="Image 3">
+    <br>
+    <div class="caption">60倍镜头变焦下的月亮</div>
+</div>
+
+月球是我拍摄过最多的天体。也许是因为她最近，也许是因为她亮，但是更吸引我的是<b>她那永远看不到的背面</b>。
+
+<div class="image-container">
+  <img src="{{ '/assets/blog_images/0529_05.JPG' | relative_url }}" alt="Image 4">
+  <br>
+  <div class="caption">天文课上用专业的望远镜拍摄的NGC 4485星系，距地球2500万光年</div>
+</div>
+
+这是我拍摄过最远的星体。虽然在一瞬间就看了它，但是这个星体发出的光其实是2500万年前的。那时候地球还在中新世，冰河时代即将开始，哺乳动物也才刚刚出现。
+<br>
+<br>
+有人说当你抬头仰望星空时，你就能看见整个宇宙的历史。的确，因为光速是有限的，你看的月亮其实是1.3秒前的月亮，你看到的太阳其实是8分钟前的太阳。星体越远，你看到是它们越遥远的历史。
+
+<div class="image-container">
+  <img src="{{ '/assets/blog_images/0529_06.JPG' | relative_url }}" alt="Image 5">
+  <br>
+  <div class="caption">昨晚我头顶的星空</div>
+</div>
+
+我望着这星河璀璨的夜空，突然感到有一阵无助的孤独。<b>我</b> 只是这个地球上的1/70亿，地球只是银河系1/1000亿，而银河系只是这个宇宙的1/10000亿。
+<br>
+<br>
+我 小到忽略不计，于是我问自己，“<b>我存在的意义又是什么呢？</b>”
+<br>
+<br>
+又突然想到，当1000年前的苏轼写下 “<b>寄蜉蝣于天地，渺沧海之一粟</b>” 时，他是不是跟我仰望的同一片星空呢？
