english-version base version.

--- a/_posts/2024-05-29-01.md
+++ b/_posts/2024-05-29-01.md
@@ -3,6 +3,7 @@ layout: post
 title: "拍摄星空 是件浪漫又孤独的事"
 date: 2024-05-29 20:00:00 +0800
 categories: blog
+lang: "zh"
 ---
 
 本科的时候，我上了一节 “观测天文学” 的物理课。那节课重新激发了我对宇宙的兴趣。小时候的梦想一直的梦想就是做一个天文学家，但是随着年龄的长大，我发现，宇宙实在是太远太大了，总感觉这个梦想不切实际。
