--- a/_posts/2024-05-30-02.md
+++ b/_posts/2024-05-30-02.md
@@ -3,6 +3,7 @@ layout: post
 title: "Més que un Club 不仅仅是一家俱乐部：巴塞罗那的善行与价值观"
 date: 2024-05-30 10:00:00 +0800
 categories: blog
+lang: "zh"
 ---
 2022.06.30 --- 巴塞罗那俱乐部财政赤字：<b>-6.08</b>亿欧元
 <br>
