--- a/_posts/2024-07-21-01.md
+++ b/_posts/2024-07-21-01.md
@@ -15,7 +15,7 @@ lang: "zh"
 </div>
 
 ## 科研六步法
-李善德德荔枝转运发简直是现代科研的教科书模版。
+李善德的荔枝转运法简直是现代科研的教科书模版。
 1. <b>文献占有，理论研究</b> - 通过大量的地图阅读，线路研究，李善德先在纸上完成了理论线路的规划和对时间的模拟。 
 2. <b>实地考察，修正理论</b> - 去到荔枝原产地进行实地考察，并了解荔枝保鲜的土方法，然后对理论进行修正。
 3. <b>模拟实验，收集数据</b> - 李善德将四种理论进行了横向的实验对比，并收集实验数据，通过表格筛选出两种最优方案。
