three elements of football blog

--- a/_posts/2024-10-01-01.md
+++ b/_posts/2024-10-01-01.md
@@ -99,6 +99,7 @@ lang: "zh"
     实例: <u><b>冰岛的政府投资</b></u>
     </span>
     <span class="tooltip-content" role="tooltip" id="tooltip2">
+    <img src="{{ '/assets/blog_images/1003_02.JPG' | relative_url }}" alt="Image 2">
       <p>
       尽管<strong>冰岛</strong>人口仅有<strong>36.6万人</strong>，政府投资了大约<strong>1,500万美元</strong>用于建设室内足球设施并加强教练教育。该国现在每<strong>500名居民</strong>就拥有一名<strong>欧足联认证的教练</strong>，这是全球最高的比例之一。这种投资促使冰岛国家队历史性地进入了<strong>2016年欧锦赛</strong>和<strong>2018年世界杯</strong>。
       </p>
@@ -133,6 +134,7 @@ lang: "zh"
     实例：<u><b>英国曼切斯特</b></u>
     </span>
     <span class="tooltip-content" role="tooltip" id="tooltip4">
+    <img src="{{ '/assets/blog_images/1003_03.JPG' | relative_url }}" alt="Image 3">
       <p>
       <strong>曼彻斯特</strong>拥有强大的足球基础设施，包含超过<strong>10座</strong>专业足球场，如老特拉福德和阿提哈德球场，以及超过<strong>50个健身房和训练中心</strong>。此外，城市设有先进的运动医学中心，如曼彻斯特运动医学研究所，为运动员提供康复和医学支持。这些设施推动了职业和基层足球的共同发展。
       </p>
