updated book-quote blog

--- a/_posts/2025-03-07-01.md
+++ b/_posts/2025-03-07-01.md
@@ -11,140 +11,189 @@ lang: "zh"
 ## The Art of Loving（爱的艺术）
 
 - **原文**:
-  > “Love is possible only if two persons communicate with each other from the center of their existence, hence if each one of them experiences himself from the center of his existence. Only in this “central experience” is human reality, only here is aliveness, only here is the basis for love.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “Love is possible only if two persons communicate with each other from the center of their existence, hence if each one of them experiences himself from the center of his existence. Only in this “central experience” is human reality, only here is aliveness, only here is the basis for love.”
+  </div>
 
 - **译文**:
-  > “爱情只能产生于这样两个人中间，这两个人都从他们生存的圈子里跳出来并互相结合，同时他们每个人都又能脱离自我中心去体验自己。只有这种“中心体验”才是人的现实，才是生活，才是爱情的基础。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “爱情只能产生于这样两个人中间，这两个人都从他们生存的圈子里跳出来并互相结合，同时他们每个人都又能脱离自我中心去体验自己。只有这种“中心体验”才是人的现实，才是生活，才是爱情的基础。”
+  </div>
 
 ---
 
 ## A Brief History of Humankind（人类简史）
 
 - **原文**:
-  > “Large numbers of strangers can cooperate successfully by believing in common myths. Any large-scale human cooperation – whether a modern state, a medieval church, an ancient city or an archaic tribe – is rooted in common myths that exist only in people’s collective imagination.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “Large numbers of strangers can cooperate successfully by believing in common myths. Any large-scale human cooperation – whether a modern state, a medieval church, an ancient city or an archaic tribe – is rooted in common myths that exist only in people’s collective imagination.”
+  </div>
 
 - **译文**:
-  > “无论是现代国家、中世纪的教堂、古老的城市，或者古老的部落，任何大规模人类合作的根基，都在于某种只存在于集体想象中的虚构故事。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “无论是现代国家、中世纪的教堂、古老的城市，或者古老的部落，任何大规模人类合作的根基，都在于某种只存在于集体想象中的虚构故事。”
+  </div>
 
 ---
 
 ## Sophie's World（苏菲的世界）
 
 - **原文**:
-  > “It was once said that ‘idleness is the ideal of genius, and indolence the virtue of the Romantic.’”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “It was once said that ‘idleness is the ideal of genius, and indolence the virtue of the Romantic.’”
+  </div>
 
 - **译文**:
-  > “闲散是天才的理想,懒惰是浪漫主义者的美德”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “闲散是天才的理想,懒惰是浪漫主义者的美德”
+  </div>
 
 ---
 
 ## The Moon and Sixpence（月亮与六便士）
 
 - **原文**:
-  > “Life is nothing but a chaos, full of all kinds of absurdity and filth, which can only make people laugh, and it can't help but make people sad.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “Life is nothing but a chaos, full of all kinds of absurdity and filth, which can only make people laugh, and it can't help but make people sad.”
+  </div>
 
 - **译文**:
-  > “生活不过是一场混乱，充满了种种的荒谬和污秽，只能引人发笑，未免乐极生悲。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “生活不过是一场混乱，充满了种种的荒谬和污秽，只能引人发笑，未免乐极生悲。”
+  </div>
 
 ---
 
 ## 被讨厌的勇气
 
 - **原文**:
-  > "True freedom is not being afraid of being disliked by others, and true happiness is contributing to others."
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    "True freedom is not being afraid of being disliked by others, and true happiness is contributing to others."
+  </div>
 
 - **译文**:
-  > “所谓的自由就是不害怕被他人讨厌，所谓的幸福就是对他人有所贡献。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “所谓的自由就是不害怕被他人讨厌，所谓的幸福就是对他人有所贡献。”
+  </div>
 
 ---
 
 ## 不能承受的生命之轻
 
 - **原文**:
-  > “He suddenly recalled from Plato's Symposium: People were hermaphrodites until God split then in two, and now all the halves wander the world over seeking one another. Love is the longing for the half of ourselves we have lost.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “He suddenly recalled from Plato's Symposium: People were hermaphrodites until God split then in two, and now all the halves wander the world over seeking one another. Love is the longing for the half of ourselves we have lost.”
+  </div>
 
 - **译文**:
-  > “柏拉图在《会饮篇》中有个著名的传说：‘以前人类是两性同体的，上帝把他们分成了两半，从那时起，这两半就开始在世上游荡，相互寻找。爱情，是我们自己失去的另一半的渴望。’”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “柏拉图在《会饮篇》中有个著名的传说：‘以前人类是两性同体的，上帝把他们分成了两半，从那时起，这两半就开始在世上游荡，相互寻找。爱情，是我们自己失去的另一半的渴望。’”
+  </div>
 
 ---
 
 ## L'Etranger（局外人）
 
 - **原文**:
-  > "In life, one should never pretend or be insincere."
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    "In life, one should never pretend or be insincere."
+  </div>
 
 - **译文**:
-  > “人生在世，永远也不该演戏作假”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “人生在世，永远也不该演戏作假”
+  </div>
 
 ---
 
 ## 悉达多
 
 - **原文**:
-  > “There is no past, no future. Everything is essence and the present”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “There is no past, no future. Everything is essence and the present”
+  </div>
 
 - **译文**:
-  > “没有过去，没有未来。一切都是本质和当下。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “没有过去，没有未来。一切都是本质和当下。”
+  </div>
 
 ---
 
 ## The Why Café（世界尽头的咖啡馆）
 
 - **原文**:
-  > “If you are doing or have done what you want to do, there is no reason to be afraid of losing the chance of doing those things.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “If you are doing or have done what you want to do, there is no reason to be afraid of losing the chance of doing those things.”
+  </div>
 
 - **译文**:
-  > “如果你已经做成了想做的事，或者每天都在做想做的事，那你没有理由害怕失去做那些事的机会。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “如果你已经做成了想做的事，或者每天都在做想做的事，那你没有理由害怕失去做那些事的机会。”
+  </div>
 
 ---
 
 ## 皮囊
 
-- **原文**:
-  > “每个人都已经过上不同的生活，不同的生活让许多人在这个时空里没法相处在共同的状态中，除非等彼此都老了，年迈再次抹去其他，构成我们每个人最重要的标志，或许那时候的聚会才能成真。”
+- **内容**:
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “每个人都已经过上不同的生活，不同的生活让许多人在这个时空里没法相处在共同的状态中，除非等彼此都老了，年迈再次抹去其他，构成我们每个人最重要的标志，或许那时候的聚会才能成真。”
+  </div>
 
 ---
 
 ## Machine Like Me（像我这样的机器）
 
 - **原文**:
-  > “We create a machine with intelligence and self-awareness and push it out into our imperfect world.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “We create a machine with intelligence and self-awareness and push it out into our imperfect world.”
+  </div>
 
 - **译文**:
-  > “我们创造了一种有智能、有自我意识的机器，并将其推入我们这个不完美的世界。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “我们创造了一种有智能、有自我意识的机器，并将其推入我们这个不完美的世界。”
+  </div>
 
 ---
 
 ## 长安的荔枝
 
-- **原文**:
-  > “他的魂魄已在漫长的跋涉中磨蚀一空，失去了对城墙内侧那个绮丽世界的全部想象。”
+- **内容**:
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “他的魂魄已在漫长的跋涉中磨蚀一空，失去了对城墙内侧那个绮丽世界的全部想象。”
+  </div>
 
 ---
 
 ## 小王子
 
 - **原文**:
-  > “Such is the way with flowers. Once you've loved one that blossoms on a distant star, the night sky becomes a field of sweetness — every star glowing as if crowned with petals.”
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    “Such is the way with flowers. Once you've loved one that blossoms on a distant star, the night sky becomes a field of sweetness — every star glowing as if crowned with petals.”
+  </div>
 
 - **译文**:
-  > “这就象花一样。如果你爱上了一朵生长在一颗星星上的花，那么夜间，你看着天空就感到甜蜜愉快，所有的星星上都好象开着花。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “这就象花一样。如果你爱上了一朵生长在一颗星星上的花，那么夜间，你看着天空就感到甜蜜愉快，所有的星星上都好象开着花。”
+  </div>
 
 ---
 
 ## 我曾侍候过英国国王
 
 - **原文**:
-  > "The essence of life is the perpetual interrogation of death. When my time comes, I wonder how I shall meet it. And I have come to understand that death - no, this profound self-examination - is in truth a dialogue conducted through the lens of eternity and the infinite."
+  <div class="quote-box" style="font-family: 'Avenir Next Regular';">
+    "The essence of life is the perpetual interrogation of death. When my time comes, I wonder how I shall meet it. And I have come to understand that death - no, this profound self-examination - is in truth a dialogue conducted through the lens of eternity and the infinite."
+  </div>
 
 - **译文**:
-  > “生活的实质就是询问死亡。等到我的那个时刻到来，我将会怎么对待。我还悟出，这死，不，这一对自己的询问，实际上是在无限与永恒的视角之下的交谈。”
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “生活的实质就是询问死亡。等到我的那个时刻到来，我将会怎么对待。我还悟出，这死，不，这一对自己的询问，实际上是在无限与永恒的视角之下的交谈。”
+  </div>
 
 ---
-<br>
 
-<div align="center">
-  <div style="display: inline-block; border: 1px solid #000; padding: 10px;">
-    持续更新中。。。。
-  </div>
+<div class="final-quote" style="font-family: 'DengXian Regular';">
+  持续更新中。。。
 </div>
