--- a/_posts/2025-03-07-01.md
+++ b/_posts/2025-03-07-01.md
@@ -166,7 +166,7 @@ lang: "zh"
 
 ---
 
-## 小王子
+## Le Petit Prince (小王子)
 
 - **原文**:
   <div class="quote-box" style="font-family: 'Avenir Next Regular';">
@@ -180,7 +180,7 @@ lang: "zh"
 
 ---
 
-## 我曾侍候过英国国王
+## I Served the King of England (我曾侍候过英国国王)
 
 - **原文**:
   <div class="quote-box" style="font-family: 'Avenir Next Regular';">
@@ -193,6 +193,14 @@ lang: "zh"
   </div>
 
 ---
+
+## 冬泳
+
+- **内容**:
+  <div class="quote-box" style="font-family: 'DengXian Regular';">
+    “耶稣今天讲，你必忘记你的苦楚，就是想起来，也如流过去的水一样，你在世的日子，要比正午更明，虽有黑暗，仍像早晨。”
+  </div>
+
 
 <div class="final-quote" style="font-family: 'DengXian Regular';">
   持续更新中。。。
